footer and spacing issues

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -179,6 +179,7 @@ div {
 			
 .span8 {
 	margin-top: 40px;
+	margin-left: 0px;
 	}
 	
 .span9 {
@@ -191,10 +192,13 @@ div {
 
 @media (max-width: 980px) {
     .right-column {
-    	width: 94%;
+
+    	clear: both;
     	}}
 
-    	
+#twitter-widget-0 {
+	height: auto;
+}
 
 .detail-highlights p {
 	color: #000000;
@@ -229,10 +233,16 @@ div {
 	background: -webkit-linear-gradient(top, #A7A9AC, #D1D3D4); /* Safari 5.1, Chrome 10+ */
 	background: -moz-linear-gradient(top, #A7A9AC, #D1D3D4); /* Firefox 3.6+ */  
 	background: -ms-linear-gradient(top, #A7A9AC, #D1D3D4); /* IE 10 */
-	background: -o-linear-gradient(top, #A7A9AC, #D1D3D4); /* Opera 11.10+ */ 
-		
+	background: -o-linear-gradient(top, #A7A9AC, #D1D3D4); /* Opera 11.10+ */ 		
 	}
-
+		
+@media (max-width: 980px) {
+#search-area {
+	margin: 0px;
+	margin-bottom: 10px;	
+		}}
+		
+		
 #search-area p {
 	font-size: 14px;
 	color: #FFFFFF;
@@ -243,6 +253,7 @@ div {
 	margin: 20px;
 	float: left;	
 		}
+
 	
 .navbar-search .search-query {
 	border-radius: 4px;	
@@ -422,18 +433,24 @@ footer {
 	color: #FFFFFF;
 	font-size: 12px;
 	margin-right: 10px;
-	margin-bottom: 12px;
+	margin-left: 10px;
+	margin-bottom: 20px;
 	padding-left: auto;
 	}
 
 @media (max-width: 1180px) {	
 	footer {
-		margin-left: 8px;
+		margin-left: 10px;
 		}}
 
 @media (max-width: 767px) {	
 	footer {
 		margin-left: 30px;
+		}}
+
+@media (max-width: 350px) {	
+	footer a {
+		margin-right: 24px;
 		}}
 		
 .footer-icon {
